FIX- Dropdown in Navbar Not Visible on Hover #308

--- a/assets/scss/_navbar_project.scss
+++ b/assets/scss/_navbar_project.scss
@@ -9,10 +9,14 @@
   .current {
     color: $primary !important;
   }
-
+  &:hover {
+    .dropdown-menu {
+      display: block;
+    }
+  }
   .dropdown-menu {
     padding: 0;
-    transform: translate(-15%, 2.5rem) !important;
+    transform: translate(-15%, 0rem) !important;
     border-radius: 0;
     .dropdown-item {
       height: 5rem;
